compiler/flux-parser/src/grammar/snapshots/flux_parser__grammar__expr__tests__parse_call_double_colon.snap
---
source: compiler/flux-parser/src/grammar/expr.rs
expression: "&parse.debug_tree()"
---
CallExpr@0..16
  PathExpr@0..14
    Ident@0..3 "foo"
    DoubleColon@3..5 "::"
    Ident@5..8 "bar"
    DoubleColon@8..10 "::"
    Ident@10..14 "bazz"
  LParen@14..15 "("
  RParen@15..16 ")"
