compiler/flux-parser/src/grammar/snapshots/flux_parser__grammar__expr__tests__parse_ident.snap
---
source: compiler/flux-parser/src/grammar/expr.rs
expression: parse.to_string()
---
PathExpr@0..3
  Ident@0..3 "foo"
