compiler/flux-parser/src/grammar/snapshots/flux_parser__grammar__expr__tests__parse_ident_nums_seps.snap
---
source: flux-parser/src/grammar/expr.rs
expression: "&parse.debug_tree()"
---
IdentExpr@0..8
  Ident@0..8 "f0o_B8rr"
